chore: service updates