@@ -1,7 +1,7 @@
 package com.erika.eclipse_hotel.service;
 
-import com.erika.eclipse_hotel.dto.RoomRequestDTO;
-import com.erika.eclipse_hotel.dto.RoomResponseDTO;
+import com.erika.eclipse_hotel.dto.room.RoomRequestDTO;
+import com.erika.eclipse_hotel.dto.room.RoomResponseDTO;
 import com.erika.eclipse_hotel.entity.Reservation;
 import com.erika.eclipse_hotel.entity.Room;
 import com.erika.eclipse_hotel.enums.ReservationStatus;
@@ -9,6 +9,7 @@ import com.erika.eclipse_hotel.repository.ReservationRepository;
 import com.erika.eclipse_hotel.repository.RoomRepository;
 import com.erika.eclipse_hotel.service.mapper.RoomMapper;
 import jakarta.persistence.EntityNotFoundException;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -20,6 +21,7 @@ import java.util.UUID;
 import java.util.stream.Collectors;
 
 @Service
+@Slf4j
 public class RoomService {
 
     @Autowired
@@ -31,15 +33,19 @@ public class RoomService {
     @Autowired
     private ReservationRepository reservationRepository;
 
-    public RoomResponseDTO createRoom(RoomRequestDTO roomRequestDTO) {
-        Room room = roomMapper.toEntity(roomRequestDTO);
+    public RoomResponseDTO createRoom(RoomRequestDTO request) {
+        log.info("Attempting to create new room: {}", request);
+        Room room = roomMapper.toEntity(request);
         room = roomRepository.save(room);
 
+        log.info("Room created successfully. ID: {}", room.getId());
         return roomMapper.toResponseDTO(room);
     }
 
     public List<RoomResponseDTO> getAllRooms() {
+        log.info("Attempting to fetch all rooms.");
         List<Room> rooms = roomRepository.findAll();
+        log.info("Found {} rooms.", rooms.size());
 
         return rooms.stream()
                 .map(roomMapper::toResponseDTO)
@@ -47,41 +53,49 @@ public class RoomService {
     }
 
     public RoomResponseDTO getRoomById(UUID id) {
+        log.info("Attempting to fetch room. ID: {}", id);
         Room room = roomRepository.findById(id)
                 .orElseThrow(() -> new EntityNotFoundException("Room not found. ID: " + id));
+        log.info("Room found. ID: {}", id);
+
         return roomMapper.toResponseDTO(room);
     }
 
-    public RoomResponseDTO updateRoomById(UUID id, RoomRequestDTO roomRequestDTO) {
+    public RoomResponseDTO updateRoomById(UUID id, RoomRequestDTO request) {
+        log.info("Attempting to update room. ID: {}", id);
         Room room = roomRepository.findById(id)
                 .orElseThrow(() -> new EntityNotFoundException("Room not found. ID: " + id));
 
-        room.setRoomNumber(roomRequestDTO.getRoomNumber());
-        room.setType(roomRequestDTO.getType());
-        room.setPrice(new BigDecimal(roomRequestDTO.getPrice()));
+        log.debug("Updating room details: {}", request);
+        room.setRoomNumber(request.getRoomNumber());
+        room.setType(request.getType());
+        room.setPrice(new BigDecimal(request.getPrice()));
 
         Room updatedRoom = roomRepository.save(room);
-        return  roomMapper.toResponseDTO(updatedRoom);
+        return roomMapper.toResponseDTO(updatedRoom);
     }
 
     public void deleteRoomById(UUID id) {
+        log.info("Attempting to delete room. ID: {}", id);
         if (!roomRepository.existsById(id)) {
-            throw new EntityNotFoundException("Customer not found. ID: " + id);
+            log.error("Room not found. ID: {}", id);
+            throw new EntityNotFoundException("Room not found. ID: " + id);
         }
         roomRepository.deleteById(id);
+        log.info("Room deleted successfully. ID: {}", id);
     }
 
     @Transactional
     public List<RoomResponseDTO> findBookedRooms() {
         LocalDateTime now = LocalDateTime.now();
+        log.info("Attempting to fetch currently booked rooms.");
 
         List<Reservation> currentReservations = reservationRepository.findByStatus(ReservationStatus.IN_USE);
+        log.info("Found {} currently active reservations.", currentReservations.size());
 
         return currentReservations.stream()
-                .filter(reservation -> reservation.getCheckIn().isBefore(now) && reservation.getCheckOut().isAfter(now))
                 .map(Reservation::getRoom)
                 .map(roomMapper::toResponseDTO)
-                .distinct()
-                .toList();
+                .collect(Collectors.toList());
     }
 }
